apps/front-end/app/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
  namespace: sock-shop
spec:
  host: frontend.sock-shop.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
